--- a/remory/package.json
+++ b/remory/package.json
@@ -9,21 +9,36 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@aws-amplify/react-native": "^1.2.0",
+    "@livekit/react-native": "^2.9.3",
+    "@livekit/react-native-webrtc": "^137.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/stack": "^7.5.0",
+    "amazon-cognito-identity-js": "^6.3.6",
+    "aws-amplify": "^6.15.7",
+    "buffer": "^6.0.3",
     "expo": "~54.0.20",
     "expo-av": "~16.0.7",
     "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
+    "livekit-client": "^2.15.13",
+    "process": "^0.11.10",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-vector-icons": "^10.3.0"
+    "react-native-vector-icons": "^10.3.0",
+    "readable-stream": "^4.7.0",
+    "vm-browserify": "^1.1.2"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "babel-preset-expo": "^54.0.6"
+  }
 }
