--- a/remory/package.json
+++ b/remory/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "remory",
+  "name": "alzyra",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^7.5.0",
     "expo": "~54.0.20",
     "expo-av": "~16.0.7",
+    "expo-dev-client": "~6.0.16",
     "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
@@ -23,7 +24,11 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.14.0",
     "react-native-vector-icons": "^10.3.0"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@expo/ngrok": "^4.1.3"
+  }
 }
